--- a/koncerty.html
+++ b/koncerty.html
@@ -176,18 +176,18 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="koncerty/DSC_7956.jpg" style="width:80%;padding-top: 50px;">
-    <img class="mySlides" src="koncerty/DSC_8628.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8969.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8653.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8470.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8266.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8313.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8194.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8077.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8130.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_8174.jpg" style="width:80%">
-    <img class="mySlides" src="koncerty/DSC_7967.jpg" style="width:80%">
+   <img class="mySlides" src="filipzawadka/koncerty/DSC_7956.jpg" style="width:80%;padding-top: 50px;">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8628.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8969.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8653.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8470.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8266.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8313.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8194.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8077.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8130.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_8174.jpg" style="width:80%">
+    <img class="mySlides" src="filipzawadka/koncerty/DSC_7967.jpg" style="width:80%">
 
 
 <!-- Container (Contact Section) -->
