--- a/portrety.html
+++ b/portrety.html
@@ -176,16 +176,17 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="filipzawadka/portrety/---_00182.jpg" style="width:80%;padding-top: 50px;">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_1416.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_1064p.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_1126.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_1765.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_1835.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_2540.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_2769.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/DSC_2191.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/portrety/---_00176.jpg" style="width:80%">
+   <img class="mySlides" src="portrety/---_00182.jpg" style="width:40%;padding-top: 50px;">
+    <img class="mySlides" src="portrety/DSC_1416.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/DSC_1064p.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/DSC_1126.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/DSC_1765.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/DSC_1835.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/DSC_2540.jpg" style="width:40%">
+    <img class="mySlides" src="portrety/DSC_2769.jpg" style="width:40%">
+    <img class="mySlides" src="portrety/DSC_2191.jpg" style="width:70%">
+    <img class="mySlides" src="portrety/---_00175.jpg" style="width:40%">
+    <img class="mySlides" src="portrety/---_00176.jpg" style="width:40%">
 
 
 
