--- a/koncerty.html
+++ b/koncerty.html
@@ -38,13 +38,15 @@
   }
 
 img {
-    width: 90%; /* Set width to 100% */
+
     margin: auto;
     float: middle;
     display: block;
      margin-left: auto; 
      margin-right: auto;
      padding-bottom: 2em;
+     max-width: 80vw;
+     max-height: 95vh;
   }
 
 
@@ -176,18 +178,19 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="filipzawadka/koncerty/DSC_7956.jpg" style="width:80%;padding-top: 50px;">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8628.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8969.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8653.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8470.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8266.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8313.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8194.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8077.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8130.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_8174.jpg" style="width:80%">
-    <img class="mySlides" src="filipzawadka/koncerty/DSC_7967.jpg" style="width:80%">
+<br> <br><br>
+   <img class="mySlides" src="koncerty/DSC_7956.jpg">
+    <img class="mySlides" src="koncerty/DSC_8628.jpg">
+    <img class="mySlides" src="koncerty/DSC_8969.jpg">
+    <img class="mySlides" src="koncerty/DSC_8653.jpg">
+    <img class="mySlides" src="koncerty/DSC_8470.jpg">
+    <img class="mySlides" src="koncerty/DSC_8266.jpg" >
+    <img class="mySlides" src="koncerty/DSC_8313.jpg">
+    <img class="mySlides" src="koncerty/DSC_8194.jpg" >
+    <img class="mySlides" src="koncerty/DSC_8077.jpg" >
+    <img class="mySlides" src="koncerty/DSC_8130.jpg" >
+    <img class="mySlides" src="koncerty/DSC_8174.jpg">
+    <img class="mySlides" src="koncerty/DSC_7967.jpg" >
 
 
 <!-- Container (Contact Section) -->
@@ -227,7 +230,7 @@ img {
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Website made by me with the help of <a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
+  <p>Website made by me with the help of<a href="https://www.w3schools.com" data-toggle="tooltip" title="Visit w3schools">www.w3schools.com</a></p> 
 </footer>
 
 <script>
