--- a/portrety.html
+++ b/portrety.html
@@ -38,13 +38,14 @@
   }
 
 img {
-    width: 90%; /* Set width to 100% */
     margin: auto;
     float: middle;
     display: block;
      margin-left: auto; 
      margin-right: auto;
      padding-bottom: 2em;
+     max-width: 80vw;
+     max-height: 95vh;
   }
 
 
@@ -176,17 +177,18 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="portrety/---_00182.jpg" style="width:40%;padding-top: 50px;">
-    <img class="mySlides" src="portrety/DSC_1416.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/DSC_1064p.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/DSC_1126.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/DSC_1765.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/DSC_1835.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/DSC_2540.jpg" style="width:40%">
-    <img class="mySlides" src="portrety/DSC_2769.jpg" style="width:40%">
-    <img class="mySlides" src="portrety/DSC_2191.jpg" style="width:70%">
-    <img class="mySlides" src="portrety/---_00175.jpg" style="width:40%">
-    <img class="mySlides" src="portrety/---_00176.jpg" style="width:40%">
+<b><b><b>
+   <img class="mySlides" src="portrety/---_00182.jpg">
+    <img class="mySlides" src="portrety/DSC_1416.jpg">
+    <img class="mySlides" src="portrety/DSC_1064p.jpg">
+    <img class="mySlides" src="portrety/DSC_1126.jpg">
+    <img class="mySlides" src="portrety/DSC_1765.jpg">
+    <img class="mySlides" src="portrety/DSC_1835.jpg">
+    <img class="mySlides" src="portrety/DSC_2540.jpg">
+    <img class="mySlides" src="portrety/DSC_2769.jpg">
+    <img class="mySlides" src="portrety/DSC_2191.jpg">
+    <img class="mySlides" src="portrety/---_00175.jpg">
+    <img class="mySlides" src="portrety/---_00176.jpg">
 
 
 
