--- a/teatr.html
+++ b/teatr.html
@@ -38,13 +38,14 @@
   }
 
 img {
-    width: 90%; /* Set width to 100% */
     margin: auto;
     float: middle;
     display: block;
      margin-left: auto; 
      margin-right: auto;
      padding-bottom: 2em;
+     max-width: 80vw;
+     max-height: 95vh;
   }
 
 
@@ -176,9 +177,10 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="teatr/DSC_1273.jpg" style="width:80%;padding-top: 50px;">
-    <img class="mySlides" src="teatr/DSC_1276.jpg" style="width:80%">
-    <img class="mySlides" src="teatr/DSC_1277.jpg" style="width:80%">
+<b><b><b>
+   <img class="mySlides" src="teatr/DSC_1273.jpg">
+    <img class="mySlides" src="teatr/DSC_1276.jpg">
+    <img class="mySlides" src="teatr/DSC_1277.jpg">
 
 
 <!-- Container (Contact Section) -->
