--- a/uliczna.html
+++ b/uliczna.html
@@ -38,13 +38,14 @@
   }
 
 img {
-    width: 90%; /* Set width to 100% */
     margin: auto;
     float: middle;
     display: block;
      margin-left: auto; 
      margin-right: auto;
      padding-bottom: 2em;
+     max-width: 80vw;
+     max-height: 95vh;
   }
 
 
@@ -176,18 +177,19 @@ img {
     </div>
   </div>
 </nav>
-   <img class="mySlides" src="uliczna/indie_HP5_002.jpg" style="width:80%;padding-top: 50px;">
-    <img class="mySlides" src="uliczna/indie_hp5004.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_hp5017.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_hp5006-2-Edit.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_hp5014.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_kodajcolor168.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_kodakcolor_039.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_kodakcolor_046.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/indie_kodakcolor_066.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/kodak_indie190.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/DSC_2962.jpg" style="width:80%">
-    <img class="mySlides" src="uliczna/DSC_2953.jpg" style="width:80%">
+<b><b><b>
+   <img class="mySlides" src="uliczna/indie_HP5_002.jpg">
+    <img class="mySlides" src="uliczna/indie_hp5004.jpg">
+    <img class="mySlides" src="uliczna/indie_hp5017.jpg">
+    <img class="mySlides" src="uliczna/indie_hp5006-2-Edit.jpg">
+    <img class="mySlides" src="uliczna/indie_hp5014.jpg">
+    <img class="mySlides" src="uliczna/indie_kodajcolor168.jpg">
+    <img class="mySlides" src="uliczna/indie_kodakcolor_039.jpg">
+    <img class="mySlides" src="uliczna/indie_kodakcolor_046.jpg">
+    <img class="mySlides" src="uliczna/indie_kodakcolor_066.jpg">
+    <img class="mySlides" src="uliczna/kodak_indie190.jpg">
+    <img class="mySlides" src="uliczna/DSC_2962.jpg">
+    <img class="mySlides" src="uliczna/DSC_2953.jpg">
 
 
 <!-- Container (Contact Section) -->
