--- a/portrety.html
+++ b/portrety.html
@@ -165,7 +165,7 @@ img {
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="uliczna.html">STREET</a></li>
-          <li><a href="portrety.html">PORTRAITS</a></li>
+          <li><a href="portrety.html" style=" border-color: #f1f1f1;">PORTRAITS</a></li>
           <li><a href="teatr.html">THEATRE</a></li>
           <li><a href="koncerty.html">CONCERTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
@@ -180,8 +180,8 @@ img {
 <br><br><br>
    <img class="mySlides" src="portrety/---_00182.jpg">
     <img class="mySlides" src="portrety/DSC_1416.jpg">
-    <img class="mySlides" src="portrety/DSC_1064p.jpg">
     <img class="mySlides" src="portrety/DSC_1126.jpg">
+    <img class="mySlides" src="portrety/DSC_1064p.jpg">
     <img class="mySlides" src="portrety/DSC_1756.jpg">
     <img class="mySlides" src="portrety/DSC_1835.jpg">
     <img class="mySlides" src="portrety/DSC_2540.jpg">
