--- a/portrety.html
+++ b/portrety.html
@@ -108,7 +108,7 @@ img {
     opacity: 0.9;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #d5d5d5;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
@@ -165,7 +165,7 @@ img {
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="uliczna.html">STREET</a></li>
-          <li><a href="portrety.html" style=" border-color: #f1f1f1;">PORTRAITS</a></li>
+          <li><a href="portrety.html" style="color: #fff">PORTRAITS</a></li>
           <li><a href="teatr.html">THEATRE</a></li>
           <li><a href="koncerty.html">CONCERTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
