--- a/koncerty.html
+++ b/koncerty.html
@@ -109,7 +109,7 @@ img {
     opacity: 0.9;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #d5d5d5;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
@@ -168,7 +168,7 @@ img {
         <li><a href="uliczna.html">STREET</a></li>
         <li><a href="portrety.html">PORTRAITS</a></li>
         <li><a href="teatr.html">THEATRE</a></li>
-        <li><a href="koncerty.html">CONCERTS</a></li>
+        <li><a href="koncerty.html" style="color: #fff">CONCERTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
          
