--- a/teatr.html
+++ b/teatr.html
@@ -108,7 +108,7 @@ img {
     opacity: 0.9;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #d5d5d5 ;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
@@ -166,7 +166,7 @@ img {
       <ul class="nav navbar-nav navbar-right">
             <li><a href="uliczna.html">STREET</a></li>
             <li><a href="portrety.html">PORTRAITS</a></li>
-            <li><a href="teatr.html">THEATRE</a></li>
+            <li><a href="teatr.html" style="color: #fff">THEATRE</a></li>
             <li><a href="koncerty.html">CONCERTS</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li class="dropdown">
