--- a/uliczna.html
+++ b/uliczna.html
@@ -108,7 +108,7 @@ img {
     opacity: 0.9;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #d5d5d5;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
@@ -164,7 +164,7 @@ img {
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="uliczna.html">STREET</a></li>
+          <li><a href="uliczna.html" style="color: #fff">STREET</a></li>
           <li><a href="portrety.html">PORTRAITS</a></li>
           <li><a href="teatr.html">THEATRE</a></li>
           <li><a href="koncerty.html">CONCERTS</a></li>
